Get all Bids of the Specific Request task has been implemented!
