# lara-app/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\BidController;
 use App\Http\Controllers\RequestController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -15,9 +16,11 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-/* Requests Routes */
+/* Request Routes */
 Route::get('/requests', [RequestController::class,'index'])->name('requests.index');
 
+/* Bid Routes */
+Route::get('/bids/request/{requestId}', [BidController::class,'getBids'])->name('bids.request.getBids');
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
