# lara-app/storage/api-docs/api-docs.json
@@ -6,6 +6,35 @@
         "version": "0.1"
     },
     "paths": {
+        "/api/bids/request/{requestId}": {
+            "get": {
+                "tags": [
+                    "Bids"
+                ],
+                "summary": "Get all bids of specific request",
+                "operationId": "a4136551abaf4379a508564a4581bcd3",
+                "parameters": [
+                    {
+                        "name": "requestId",
+                        "in": "path",
+                        "description": "ID of the request to fetch its bids",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "Request not found"
+                    }
+                }
+            }
+        },
         "/": {
             "get": {
                 "responses": {
@@ -39,13 +68,17 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation / List of requests by filter"
+                        "description": "Successful operation"
                     }
                 }
             }
         }
     },
     "tags": [
+        {
+            "name": "Bids",
+            "description": "APIs for managing bids"
+        },
         {
             "name": "Requests",
             "description": "APIs for managing requests"
